--- a/counter-starter/index.html
+++ b/counter-starter/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
-
 <html lang="en">
     <head>
         <meta charset="utf-8" />
-        <meta
-            name="viewport"
-            content="width=device-width, initial-scale=1, shrink-to-fit=no"
-        />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
         <title>Counter</title>
         <link rel="stylesheet" href="styles.css" />
     </head>
@@ -14,8 +10,23 @@
     <body>
         <div id="wrapper">
             <p id="number">0</p>
+
+            <input type="number" id="step" placeholder="Enter number" />
+
             <div id="button-wrapper">
+                <input type="button" value="+1" onclick="add(1)" />
+                <input type="button" value="+10" onclick="add(10)" />
+                <input type="button" value="-1" onclick="subtract(1)" />
+                <input type="button" value="-10" onclick="subtract(10)" />
+                <input type="button" value="Reset" onclick="reset()" />
+            </div>
+
+            <div id="button-wrapper">
+                <input type="button" value="Add input" onclick="addFromInput()" />
+                <input type="button" value="Sub input" onclick="subtractFromInput()" />
             </div>
         </div>
+
+        <script src="script.js"></script>
     </body>
 </html>
